--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,19 @@ dist.dir=dist
 dist.jar=${dist.dir}/cps.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.asm-5.1.jar=lib\\asm-5.1\\lib\\asm-5.1.jar
+file.reference.asm-analysis-5.1.jar=lib\\asm-5.1\\lib\\asm-analysis-5.1.jar
+file.reference.asm-commons-5.1.jar=lib\\asm-5.1\\lib\\asm-commons-5.1.jar
+file.reference.asm-tree-5.1.jar=lib\\asm-5.1\\lib\\asm-tree-5.1.jar
+file.reference.asm-util-5.1.jar=lib\\asm-5.1\\lib\\asm-util-5.1.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.asm-5.1.jar}:\
+    ${file.reference.asm-analysis-5.1.jar}:\
+    ${file.reference.asm-commons-5.1.jar}:\
+    ${file.reference.asm-tree-5.1.jar}:\
+    ${file.reference.asm-util-5.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -40,7 +50,9 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -70,5 +82,10 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
+source.reference.asm-5.1.jar=lib/asm-5.1/src.zip
+source.reference.asm-analysis-5.1.jar=lib/asm-5.1/src.zip
+source.reference.asm-commons-5.1.jar=lib/asm-5.1/src.zip
+source.reference.asm-tree-5.1.jar=lib/asm-5.1/src.zip
+source.reference.asm-util-5.1.jar=lib/asm-5.1/src.zip
 src.dir=src
 test.src.dir=test
