--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,19 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/cps.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.asm-5.1.jar=lib\\asm-5.1\\lib\\asm-5.1.jar
-file.reference.asm-analysis-5.1.jar=lib\\asm-5.1\\lib\\asm-analysis-5.1.jar
-file.reference.asm-commons-5.1.jar=lib\\asm-5.1\\lib\\asm-commons-5.1.jar
-file.reference.asm-tree-5.1.jar=lib\\asm-5.1\\lib\\asm-tree-5.1.jar
-file.reference.asm-util-5.1.jar=lib\\asm-5.1\\lib\\asm-util-5.1.jar
+file.reference.asm-debug-all-5.1.jar=lib\\asm-5.1\\lib\\all\\asm-debug-all-5.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.asm-5.1.jar}:\
-    ${file.reference.asm-analysis-5.1.jar}:\
-    ${file.reference.asm-commons-5.1.jar}:\
-    ${file.reference.asm-tree-5.1.jar}:\
-    ${file.reference.asm-util-5.1.jar}
+    ${file.reference.asm-debug-all-5.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -82,10 +74,6 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
-source.reference.asm-5.1.jar=lib/asm-5.1/src.zip
-source.reference.asm-analysis-5.1.jar=lib/asm-5.1/src.zip
-source.reference.asm-commons-5.1.jar=lib/asm-5.1/src.zip
-source.reference.asm-tree-5.1.jar=lib/asm-5.1/src.zip
-source.reference.asm-util-5.1.jar=lib/asm-5.1/src.zip
+source.reference.asm-debug-all-5.1.jar=lib/asm-5.1/src.zip
 src.dir=src
 test.src.dir=test
