--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,10 +24,10 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/cps.jar
+dist.jar=${dist.dir}/dc4j.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.asm-debug-all-5.1.jar=lib\\asm-5.1\\lib\\all\\asm-debug-all-5.1.jar
+file.reference.asm-debug-all-5.1.jar=lib/asm-5.1/lib/all/asm-debug-all-5.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
