Renamed project to delim4j
Packages under in.neolog

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>dcc</name>
+	<name>delim4j</name>
 	<comment></comment>
 	<projects>
 	</projects>
